# halo_demo

./: .gitignore  CONSTRAINT_ADDITION_PLAN.md  PLAN.md  README.md  TODO.md
.claude/: settings.local.json
backend/: app.py  calculations.py  llm_reasoning.py  models.py  optimizer.py  pyproject.toml  requirements.txt
backend/data/: breakdown.json  breakdown2.json  distances.json  resources.json  schedule.json  weather.json  windmills.json
backend/tests/: README.md  __init__.py  conftest.py  test_optimizer.py
frontend/: index.html  package-lock.json
frontend/css/: style.css
frontend/js/: api-client.js  app.js  schedule-viewer.js
frontend/src/: App.svelte  app.css
frontend/src/components/: BreakdownPanel.svelte  ConfigPanel.svelte  ExplanationPanel.svelte  GanttChart.svelte  GanttHeader.svelte  GanttMarker.svelte  GanttTaskBar.svelte  GanttWeatherRow.svelte  GanttWindmillRow.svelte  RevenuePanel.svelte  ScheduleView.svelte  Sidebar.svelte
